<resources>
    <string name="app_name">Champions Updates</string>
    <string name="email_required">Email obrigatório</string>
    <string name="password_required">Senha obrigatória</string>
    <string name="senha_tamanho_required">Senha precisa ter ao menos 6 caracteres</string>
    <string name="senha_required">Senha obrigatória</string>
    <string name="welcome">Bem vindo/a!</string>
    <string name="sucesso_cadastro_autenticado">Email autenticado!</string>
    <string name="empty_jogos_futuros">Não há jogos futuros no momento!</string>
    <string name="empty_current_jogos">Não há jogos acontecendo!</string>
    <string name="proximos_jogos_botao">Próximos jogos</string>
    <string name="titulo_jogos_pag">Todos os jogos</string>
    <string name="jogos_passados_botao">Jogos Passados</string>
    <string name="jogos_acontecendo_botao">Jogos Acontecendo</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="login">Login</string>
    <string name="ou">ou</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="titulo_login">Champions Updates</string>
    <string name="titulo_cadastro">Preencha os dados a baixo para finalizar seu cadastro</string>
    <string name="titulo_perfil">PERFIL</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="time_do_coracao">Time do coração</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="enviar">Enviar</string>
    <string name="titulo_recup_senha">Informe o e-mail para a recuperação de senha</string>
    <string name="logo_do_time_da_casa">Logo do time da casa</string>
    <string name="logo_do_time_de_fora">Logo do time de fora</string>
    <string name="vs">vs</string>
    <string name="logo">logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="conection_error">Erro. Verifique sua conexão com a internet.</string>
    <string name="you">Você</string>
    <string name="error">Não foi possível recuperar os dados</string>
    <string name="nome">Nome: </string>
    <string name="pais">País: </string>
    <string name="estadio">Estádio: </string>
    <string name="fundacao">Fundação: </string>
    <string name="desconhecido">Desconhecido</string>
    <string name="jogos">Jogos: </string>
    <string name="vitorias">Vitórias: </string>
    <string name="empates">Empates: </string>
    <string name="derrotas">Derrotas: </string>
    <string name="pontos">Pontos : </string>
    <string name="saldo_gols">Saldo de gols: </string>
    <string name="posicao">Posição: </string>
    <string name="indefinido">Indefinido</string>
    <string name="data">Data: /</string>
    <string name="rodada">Rodada: </string>
    <string name="status_partida">Status da partida: </string>
    <string name="arbitro">Árbitro: </string>
    <string name="placar_intervalo">Placar intervalo </string>
    <string name="placar_prorrogacao">Placar prorrogação </string>
    <string name="placar_penaltis">Placar pênaltis </string>
    <string name="cancelado">Cancelado</string>
    <string name="numero">Número: </string>
    <string name="idade">Idade: </string>
    <string name="nacionalidade">Nacionalidade: </string>
    <string name="teams">TIMES</string>
    <string name="groups">GRUPOS</string>
    <string name="matches">JOGOS</string>
    <string name="profile">PERFIL</string>
    <string name="map">MAPA</string>
    <string name="chatbot">CHATBOT</string>
    <string name="atualizar_tabela">Atualizar tabela</string>
    <string name="last_update">\Última atualização: \</string>
    <string name="manual">Você está vendo o estádio do atual campeão! Navege pelo mapa para descobrir onde estão localizados os estádios de todos os times que participaram/participam do torneio dessa temporada! Clique no botão de centralizar mapa no canto superiror esquerdo para ver os outros marcadores, eles indicam os estadios!</string>
    <string name="title">Mapa ChampionsUpdates</string>
    <string name="ok">OK, ENTENDI</string>
    <string name="not_show_again">NÃO MOSTRAR NOVAMENTE</string>
    <string name="elenco">Elenco:</string>
</resources>
